Fix project files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 session.txt
+/data/*.txt
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,dart
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,dart
 
