--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 session.txt
-/data/*.txt
+advent-of-code*/data/*.txt
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,dart
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,dart
 
@@ -41,17 +41,17 @@ doc/api/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+*/.idea/**/workspace.xml
+*/.idea/**/tasks.xml
+*/.idea/**/usage.statistics.xml
+*/.idea/**/dictionaries
+*/.idea/**/shelf
 
 # AWS User-specific
-.idea/**/aws.xml
+*/.idea/**/aws.xml
 
 # Generated files
-.idea/**/contentModel.xml
+*/.idea/**/contentModel.xml
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
